k8s/manifests-cdc97d/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-cdc97d
  namespace: journee
  labels:
    app: journee-cdc97d
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-cdc97d
  template:
    metadata:
      labels:
        app: journee-cdc97d
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-cdc97d
          image: gcr.io/my-docker-471807/journee:cdc97d-f25696
          ports:
            - containerPort: 3000
